<resources>
    <string name="app_name">Test</string>
    <string name="image_description">Image %s description</string>
    <string name="image_button1">Image Button 1</string>
    <string name="image_button2">Image Button 2</string>
    <string name="image_button3">Image Button 3</string>
    <string name="image_button4">Image Button 4</string>
    <string name="plus_button">+</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="image_view">Image_View</string>
    <string name="select_image">Select Image</string>
    <string name="save">Save</string>
</resources>