<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="@drawable/image1"
        android:contentDescription="@string/image_button1"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:layout_toEndOf="@id/imageButton1"
        android:background="@drawable/image2"
        android:contentDescription="@string/image_button2"/>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/imageButton1"
        android:layout_margin="16dp"
        android:background="@drawable/image3"
        android:contentDescription="@string/image_button3"/>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/imageButton2"
        android:layout_toEndOf="@id/imageButton3"
        android:layout_margin="16dp"
        android:background="@drawable/image4"
        android:contentDescription="@string/image_button4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="onPlusButtonClick"
        android:text="@string/plus_button"
        android:textSize="36sp" />

</RelativeLayout>